1999-10-03 John R. Jackson  <jrj@purdue.edu>

	* common-src/amanda.h: protect the close macros and areads* from
	  out of range file descriptors.
	* common-src/file.c: ditto.

1999-10-02 John R. Jackson  <jrj@purdue.edu>

	* server-src/amindexd.c (build_disk_table): only "OK" results from
	  find_dump should be considered.

1999-10-02 John R. Jackson  <jrj@purdue.edu>

	* common-src/file.c (areads): when NO-ROOM became advisory and didn't
	  participate in a full handshake, it exposed a problem in areads()
	  where a static buffer was shared among all I/O.  Changed it to use
	  a separate buffer for each file descriptor.  Enhanced the test
	  program to check out the code.
	* common-src/amanda.h: ditto
	* restore-src/amidxtaped.c: minor areads/agets comment typo.
	* server-src/amindexd.c: ditto

1999-10-02 John R. Jackson  <jrj@purdue.edu>

	* server-src/amlogroll.c: fix minor memory leak.

1999-09-29 John R. Jackson  <jrj@purdue.edu>

	* server-src/dumper.c (do_dump): closed the dump messages file too
	  soon.

1999-09-23  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* recover-src/extract_list.c (samba_extract_method): Default to
	SAMBA_TAR, for similarity with other restore programs.
	(extract_files_child): If restore with SMBCLIENT is enabled, explain
	that Samba shares will be restored to the SMB share.

1999-09-22 John R. Jackson  <jrj@purdue.edu>

	* configure.in: wrong variable when processing LIBRARY_DIRS.  Fix
	  compliments of John M. Vogtle <jmvogtle@kodak.com>.

1999-09-20 John R. Jackson  <jrj@purdue.edu>

	* server-src/Makefile.am: use new amlogroll utility to rename the log
	  file to the datestamped name.
	* server-src/amcheck.c: ditto.
	* server-src/amcleanup.sh.in: ditto and call all utilities with the
	  config file name as an argument.
	* server-src/amdump.sh.in: ditto and call all utilities with the
	  config file name as an argument.
	* server-src/amflush.c: ditto.
	* server-src/amlogroll.c: new utility.